RESOLVED FIXED 211640
Fix wpt shadow-dom/slots-fallback-in-document.html
https://bugs.webkit.org/show_bug.cgi?id=211640
Summary Fix wpt shadow-dom/slots-fallback-in-document.html
Tetsuharu Ohzeki [UTC+9]
Reported 2020-05-08 12:46:20 PDT
Attachments
Patch (4.13 KB, patch)
2020-05-08 12:51 PDT, Tetsuharu Ohzeki [UTC+9]
no flags
Patch (5.18 KB, patch)
2020-05-08 22:37 PDT, Tetsuharu Ohzeki [UTC+9]
no flags
Tetsuharu Ohzeki [UTC+9]
Comment 1 2020-05-08 12:46:54 PDT
I'll attach the patch.
Tetsuharu Ohzeki [UTC+9]
Comment 2 2020-05-08 12:51:50 PDT
Darin Adler
Comment 3 2020-05-08 14:17:39 PDT
Comment on attachment 398885 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=398885&action=review > Source/WebCore/html/HTMLSlotElement.cpp:123 > - if (is<HTMLSlotElement>(*node)) > + if (is<HTMLSlotElement>(*node) && downcast<HTMLSlotElement>(*node).containingShadowRoot()) Why is this different from the code above that iterates children?
Tetsuharu Ohzeki [UTC+9]
Comment 4 2020-05-08 14:36:24 PDT
(In reply to Darin Adler from comment #3) > Comment on attachment 398885 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=398885&action=review > > > Source/WebCore/html/HTMLSlotElement.cpp:123 > > - if (is<HTMLSlotElement>(*node)) > > + if (is<HTMLSlotElement>(*node) && downcast<HTMLSlotElement>(*node).containingShadowRoot()) > > Why is this different from the code above that iterates children? This condition changing is correspond to the spec[1], step 5-1-1. [1]: https://dom.spec.whatwg.org/#find-flattened-slotables
Tetsuharu Ohzeki [UTC+9]
Comment 5 2020-05-08 22:36:50 PDT
As sideeffect, this change also fix http://wpt.live/shadow-dom/slots-outside-shadow-dom.html. I'll upload the patch which updates wpt results.
Tetsuharu Ohzeki [UTC+9]
Comment 6 2020-05-08 22:37:05 PDT
Ryosuke Niwa
Comment 7 2020-05-08 22:46:33 PDT
Are you a committer? If not, can you also set cq? when your patch is ready to land. Then any committer (including myself) can set it to cq+, which allows your patch to be committed into the WebKit repository.
Ryosuke Niwa
Comment 8 2020-05-08 22:46:48 PDT
(In reply to Ryosuke Niwa from comment #7) > Are you a committer? If not, can you also set cq? when your patch is ready > to land. Then any committer (including myself) can set it to cq+, which > allows your patch to be committed into the WebKit repository. You can do this via "Details".
Tetsuharu Ohzeki [UTC+9]
Comment 9 2020-05-08 23:26:09 PDT
(In reply to Ryosuke Niwa from comment #7) > Are you a committer? If not, can you also set cq? when your patch is ready > to land. Then any committer (including myself) can set it to cq+, which > allows your patch to be committed into the WebKit repository. Thank you for your guide, niwa san. I'm not a comitter, so I'll set cq?.
Ryosuke Niwa
Comment 10 2020-05-08 23:58:28 PDT
Comment on attachment 398919 [details] Patch Great. Thanks for the patch!
EWS
Comment 11 2020-05-09 00:00:45 PDT
Committed r261433: <https://trac.webkit.org/changeset/261433> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398919 [details].
Radar WebKit Bug Importer
Comment 12 2020-05-09 00:01:19 PDT
Note You need to log in before you can comment on or make changes to this bug.