Fix wpt shadow-dom/slots-fallback-in-document.html https://bugs.webkit.org/show_bug.cgi?id=211640

Patch by Tetsuharu Ohzeki <tetsuharu.ohzeki@gmail.com> on 2020-05-09
Reviewed by Ryosuke Niwa.

By specs, HTMLSlotElement.assignedNodes() should not count children of
a slot in a document tree for flattened assigned nodes.

https://html.spec.whatwg.org/multipage/scripting.html#dom-slot-assignednodes
https://dom.spec.whatwg.org/#find-flattened-slotables

As sideeffect, this patch also fix wpt
shadow-dom/slots-outside-shadow-dom-expected.html

LayoutTests/imported/w3c:

* web-platform-tests/shadow-dom/slots-fallback-in-document-expected.txt:
* web-platform-tests/shadow-dom/slots-outside-shadow-dom-expected.txt:

Source/WebCore:

Test: web-platform-tests/shadow-dom/slots-fallback-in-document.html
      web-platform-tests/shadow-dom/slots-outside-shadow-dom.html

* html/HTMLSlotElement.cpp:
(WebCore::flattenAssignedNodes):

Canonical link: https://commits.webkit.org/224579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261433 268f45cc-cd09-0410-ab3c-d52691b4dbfc