Source/WebCore/html/HTMLSlotElement.cpp
@@ -106,6 +106,9 @@ const Vector<Node*>* HTMLSlotElement::assignedNodes() const
 
 static void flattenAssignedNodes(Vector<Ref<Node>>& nodes, const HTMLSlotElement& slot)
 {
+    if (!slot.containingShadowRoot())
+        return;
+
     auto* assignedNodes = slot.assignedNodes();
     if (!assignedNodes) {
         for (RefPtr<Node> child = slot.firstChild(); child; child = child->nextSibling()) {
@@ -117,7 +120,7 @@ static void flattenAssignedNodes(Vector<Ref<Node>>& nodes, const HTMLSlotElement
         return;
     }
     for (const RefPtr<Node>& node : *assignedNodes) {
-        if (is<HTMLSlotElement>(*node))
+        if (is<HTMLSlotElement>(*node) && downcast<HTMLSlotElement>(*node).containingShadowRoot())
             flattenAssignedNodes(nodes, downcast<HTMLSlotElement>(*node));
         else
             nodes.append(*node);
